tdf#128969: Let the user explicitly decide to execute an external program

...bringing up a warning dialog now in cases where it would have before only
brought up a failure message

Change-Id: I850badf5927517f16f965950df699979887dbdc0